# tg_old_chats_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
configs/: config.toml.example
src/: cli.rs  client.rs  configs.rs  main.rs
src/cli/: commands.rs  models.rs
src/client/: analyze.rs  auth.rs  delete.rs  invite_link.rs  join.rs
src/client/analyze/: models.rs  polling.rs
src/configs/: client.rs
