[package]
name = "tg_old_chats_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 

# Parsing dependencies
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["serde_derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

# Client dependencies
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers" }

chrono = "0.4"
clap-cargo = "0.14.1"

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0
